Sun Jul 27 00:51:11 UTC 2008  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/EndpointPolicy/IIOPEndpointValue_i.cpp:
          Add to the criteria for invalidating the addr type of a
          defaulted hostname. This is necessary for ipv4 only builds
          because the INET_Addr::set() function in that case explicitly
          sets the address family to INET regardless of the address. The
          endpoint policy later relies on an invalid addr type for
          deciding how strictly to test candidate endpoint addresses. In
          particular, defaulted hostnames are allowed in the endpoint
          policy only when more than one protocol is present.

        * tests/POA/EndpointPolicy/EndpointPolicy.mpc:
        * tests/POA/EndpointPolicy/multi_prot.conf:
        * tests/POA/EndpointPolicy/server.cpp:

          Switched the alternate protocol to DIOP from IIOP for the multi
          protocol test, and explicitly link to the strategies library to
          get around load issues on VxWorks.

Sat Jul 26 21:32:41 UTC 2008  Carlos O'Ryan  <coryan@atdesk.com>

        * tests/DynAny_Test/test_dynsequence.cpp:
          Removed tabs.

Fri Jul 25 11:51:26 UTC 2008  Carlos O'Ryan  <coryan@atdesk.com>

        * tests/DynAny_Test/test_dynsequence.cpp:
          This fixes the following bug.
            http://bugzilla.dre.vanderbilt.edu/show_bug.cgi?id=3341
          Short recap, the test was failing silently.  The failure was a
          false positive because the test had been changed to reproduce
          one bug (2877), but in the process broke the original test.
          Fortunately or unfortunately, you had to read the output to
          detect the problem.

        * tests/DynAny_Test/driver.h:
        * tests/DynAny_Test/driver.cpp:
        * tests/DynAny_Test/test_dynany.cpp:
        * tests/DynAny_Test/test_dynunion.cpp:
        * tests/DynAny_Test/test_dynenum.cpp:
        * tests/DynAny_Test/test_wrapper.cpp: